# openclaw

./: .gitattributes  .gitignore  AGENTS.md  package.json  pnpm-lock.yaml
apps/tauri/: Cargo.toml  tauri.conf.json
apps/tauri/capabilities/: default.json
apps/tauri/src/: main.rs
src/agents/: pi-embedded-subscribe.handlers.tools.ts
src/commands/: configure.wizard.test.ts  onboard-helpers.ts
ui/: package.json  tauri.html  vite.config.tauri.ts
ui/src/: tauri-main.ts
ui/src/i18n/locales/: en.ts
ui/src/styles/: base.css  components.css  config.css  layout.css  tauri-sidebar.css  tauri-titlebar.css  tauri.css
ui/src/styles/chat/: grouped.css  layout.css  sidebar.css  text.css  tool-cards.css
ui/src/ui/: app-gateway.ts  app-lifecycle.ts  app-polling.ts  app-render.ts  app-settings.ts  app-view-state.ts  app.ts  icons.ts  navigation.test.ts  navigation.ts  storage.ts  tauri-bootstrap.test.ts  tauri-bootstrap.ts  tauri-deeplink.test.ts  tauri-deeplink.ts  tauri-shell.ts  tauri-sidebar.ts  tauri-titlebar.ts
ui/src/ui/chat/: grouped-render.ts
ui/src/ui/controllers/: cron.test.ts  cron.ts
ui/src/ui/views/: agents-panels-status-files.ts  agents-panels-tools-skills.ts  agents.ts  channels.config.ts  channels.discord.ts  channels.googlechat.ts  channels.imessage.ts  channels.nostr-profile-form.ts  channels.nostr.ts  channels.shared.ts  channels.signal.ts  channels.slack.ts  channels.telegram.ts  channels.ts  channels.types.ts  channels.whatsapp.ts  chat.ts  config-form.node.ts  config-form.render.ts  config.browser.test.ts  config.ts  cron.test.ts  cron.ts  (+12 more)
(+3 files in other folders)
